--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^2.1.3",
+    "react-icons": "^4.4.0",
+    "react-scripts": "^5.0.1",
     "uuid": "^9.0.0"
   },
   "scripts": {
