--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-icons": "^4.4.0",
     "react-scripts": "^5.0.1",
     "uuid": "^9.0.0"
