--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.12.0",
     "axios": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
+    "react-gravatar": "^2.6.3",
     "react-icons": "^4.4.0",
     "react-scripts": "^5.0.1",
     "uuid": "^9.0.0"
