--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-error-boundary": "^3.1.4",
     "react-gravatar": "^2.6.3",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "uuid": "^9.0.0"
   },
